--- a/0x00-Webpack/task_2/public/index.html
+++ b/0x00-Webpack/task_2/public/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="bundle.js"></script>
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
